--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,10 @@ body{
   font-weight: 600;
 }
 
+.docs-container{
+  padding: 10px 5%;
+}
+
 .footer{
   border-top: 1px solid gray;
   text-align: center;
